<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndustrialActivity"
    android:background="@mipmap/ind_eng">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/im_industrial_cover"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/industrial_engineering"
            android:src="@mipmap/industrial" />

        <TextView
            android:id="@+id/tv_industrial_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_blue_100"
            android:text="@string/industrial_engineering_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_blue_grey_200"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_industrial_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prev" />

            <Button
                android:id="@+id/btn_mechatronics_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>