<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentInfoFragment">


    <ImageView
        android:id="@+id/im_fragment_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/civil_engineering"
        android:src="@mipmap/civil"
        app:layout_constraintBottom_toTopOf="@+id/tv_fragment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@{}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_fragment_logo" />

    <TextView
        android:id="@+id/tv_fragment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|fill|fill_horizontal"
        android:layout_margin="10dp"
        android:background="@color/material_blue_100"
        android:text="@{viewmodel.info_str}"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|clip_vertical|fill"
        android:layout_margin="10dp"
        android:layout_marginBottom="683dp"
        android:background="@color/material_blue_grey_200"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/btn_fragment_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev" />

        <Button
            android:id="@+id/btn_fragment_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>